# jamesgeraghty.github.io

./: README.txt  elements.html  index.html  presentation.html  py_logger.html
Repo_files/Attire-logger-module/: attire_logger-v2.json  pyproject.toml
Repo_files/Attire-logger-module/attire_module/: attire_logger-v2.json  logger_sampleData.py
Repo_files/Attire-logger-module/tests/: test_attire_module.py
assets/css/: main.css
download/Repo_files/Attire_logger/attire_module/: attire_logger_schemas.py
