[tool.poetry]
name = "attire_module"
version = "0.1.0"
description = ""
authors = ["jamesgeraghty <james.geraghty@sra.io>"]

[tool.poetry.dependencies]
python = "^3.6"
BaseModel = "^20190604.1625"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
